Set min-height on the root datetime range element, fixed alignment of text inside datetime units and timer inside edit popover.

--- a/datetime-range.css
+++ b/datetime-range.css
@@ -5,11 +5,11 @@
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 4em;
   margin: 0;
   padding: 0;
   color: #444;
-  line-height: 1.5em;
-  font-size: 16px;
+  font-size: 12px;
   font-family: sans-serif;
   text-decoration: none;
   text-align: center;
@@ -48,8 +48,8 @@
 .datetime-range .end-datetime .date {
   color: #777;
   font-size: 1em;
-  line-height: 1.5em;
-  margin-top: 0.3em;
+  line-height: 1em;
+  margin-top: 0.5em;
   display: block;
   overflow: hidden;
 }
@@ -281,7 +281,7 @@
   content: ":";
   position: absolute;
   top: 0.75em;
-  right: -0.25em;
+  right: -1em;
 }
 .datetime-range .timer .timer-hours .arrow,
 .datetime-range .timer .timer-minutes .arrow,
